# DocQueryAI

./: .env  README.md  main.py  pyproject.toml
controller/: auth.py  chat.py  resourceControlller.py
database/: DbConnect.py
models/: modelDb.py  models.py
security/: dependencies.py  jwtHandler.py  securiity.py
service/: chatService.py  documentService.py
