[project]
name = "docqueryai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "cookiecutter>=2.7.1",
    "datetime>=6.0",
    "fastapi>=0.136.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-qdrant>=1.1.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.10.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "unicorn>=2.1.4",
    "uvicorn>=0.46.0",
]
